# learning-diary

./: .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  README.md  _quarto.yml  about.html  about.qmd  docker-compose.yml  index.html  index.qmd  index.xml  init-codespace.sh  justfile  listings.json  pyproject.toml  requirements.in  requirements.txt  robots.txt  search.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
_site/: about.html  index.html  index.xml  listings.json  search.json  sitemap.xml
_site/snippets/: jupyter-options.html  jupyter-quarto.html  jupyter.html
docker/: Dockerfile-anaconda3  Dockerfile-conda  Dockerfile-datascience  Dockerfile-jupyter  Dockerfile-rocker
posts/2023-0-template/: index.html  index.qmd
posts/2023-02-16-welcome/: index.html  index.qmd
posts/2023-02-17-geom-col/: index.html  index.qmd
posts/2023-02-17-r-geom-col/: index.html  index.qmd
posts/2023-02-18-jupyter/: index.html  index.qmd
posts/2023-02-18-py-jupyter/: index.html  index.qmd
posts/2023-02-22-hello-jupyter/: index.html  index.qmd
posts/2023-02-22-py-hello-jupyter/: index.html
posts/2023-02-26-altair/: index.html  index.qmd
posts/2023-02-26-py-altair/: index.html  index.qmd
posts/2023-02-26-quarto/: index.html  index.qmd
posts/2023-02-26-quarto-experience/: index.html  index.qmd
posts/2023-02-quarto/: index.ipynb  index.qmd
posts/2023-02-til/: index.qmd
posts/2023-03-15-py-pyscript/: index.html  index.qmd
posts/2023-03-15-pyscript/: index.html  index.qmd
posts/2023-03-20-r-wasm/: index.html  index.qmd
posts/2023-03-til/: index.qmd
posts/2023-04-23-chatgpt/: index.html  index.qmd
posts/2023-04-23-py-chatgpt/: index.html  index.qmd
posts/2023-04-26-dataverse/: index.html  index.qmd
posts/2023-04-26-r-dataverse/: index.html  index.qmd
posts/2023-04-27-geocoding/: index.html
posts/2023-04-27-posit-cloud/: index.html
posts/2023-11-04-pyproject-toml/: index.html  index.qmd  pyproject.toml  requirements.txt
snippets/: _metadata.yml  create-post.py  farbtafeln-2025.html  farbtafeln.html  ipython-display-nbconvert.html  ipython-display.html  ipython-display.ipynb  jupyter-options.html  jupyter-options.ipynb  jupyter-quarto.html  jupyter-quarto.qmd  jupyter.html  jupyter.ipynb  packages-install.R  r-cell-conditional.html  r-cell-conditional.qmd  r-packages-update.R  r-rocker-update.sh  render-all-posts.sh  requirements-posts.txt
(+212 files in other folders)
